--- a/calculator.html
+++ b/calculator.html
@@ -12,28 +12,28 @@
        <div id="result_display_value"></div>
      </div>
      <div id="buttons_row_1" class="row">
-       <div class="button">1</div>
-       <div class="button">2</div>
-       <div class="button">3</div>
-       <div class="button">+</div>
+       <div class="button" id="but_one">1</div>
+       <div class="button" id="but_two">2</div>
+       <div class="button" id="but_three">3</div>
+       <div class="button" id="but_plus">+</div>
      </div>
      <div id="buttons_row_2" class="row">
-        <div class="button">4</div>
-        <div class="button">5</div>
-        <div class="button">6</div>
-        <div class="button">-</div>
+        <div class="button" id="but_four">4</div>
+        <div class="button" id="but_five">5</div>
+        <div class="button" id="but_six">6</div>
+        <div class="button" id="but_sub">-</div>
      </div>
      <div id="buttons_row_3" class="row">
-        <div class="button">7</div>
-        <div class="button">8</div>
-        <div class="button">9</div>
-        <div class="button">*</div>
+        <div class="button" id="but_seven">7</div>
+        <div class="button" id="but_eight">8</div>
+        <div class="button" id="but_nine">9</div>
+        <div class="button" id="but_mult">*</div>
      </div>
      <div id="buttons_row_4" class="row">
-        <div class="button">CLR</div>
-        <div class="button">0</div>
-        <div class="button">ENT</div>
-        <div class="button">/</div>
+        <div class="button" id="but_clr">CLR</div>
+        <div class="button" id="but_zero">0</div>
+        <div class="button" id="but_ent">ENT</div>
+        <div class="button" id="but_div">/</div>
      </div>
   </div>
 </body>
